--- a/client/src/css/login.module.css
+++ b/client/src/css/login.module.css
@@ -34,6 +34,11 @@ body {
     color: var(--secondary-color);
     font-weight: 900;
     font-family: 'Lobster', sans-serif;
+    background: url('../../public/images/wizard-v4.jpg') 50% 50%;
+    background-size: cover;
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    /* text-shadow: -1px 10px 18px rgba(0, 0, 0, 0.63); */
 }
 
 .name-content p {
@@ -54,7 +59,7 @@ body {
 }
 
 .loadingMask {
-    background-color: rgba(255, 255, 255, 0.342);
+    background-color: rgba(255, 255, 255, 0.342) !important;
     z-index: 9998;
     width: 530px;
     height: 100%;
@@ -115,6 +120,7 @@ body {
     font-size: 1.1rem;
     color: #fff;
     width: 100%;
+    height: 50px    ;
 }
 
 .formBody .create-account {
